syntax = "proto3";
package LPS.Server.Core.Rpc.InnerMessages;
import "google/protobuf/any.proto";

enum ControlMessage {
    Ready = 0;
    Restart = 1;
    ShutDown = 2;
}

enum RemoteType {
    DBManager = 0;
    Server = 1;
    Gate = 2;
}

message Control {
  RemoteType From = 1;
  ControlMessage Message = 2;
  repeated google.protobuf.Any Args = 3;
}
